fix: 닉네임 중복 확인 수정, 일상생활  공유 공간 text overflow 수정

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -218,3 +218,23 @@ input[type="range"]::-moz-range-thumb {
   background-position: center;
   transform: translateY(-8px);
 }
+
+.line-clamp-1 {
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.line-clamp-2 {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical; 
+  text-overflow: ellipsis;
+}
+
+.flex-1 {
+  flex: 1 1 auto; /* Allow text to take up remaining space */
+  min-width: 0;   /* Prevent overflowing */
+}
